Trying to fix background image scroll on mobile

--- a/index.css
+++ b/index.css
@@ -22,6 +22,7 @@ body {
   font-family: "Raleway", serif;
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
+  z-index: -2;
 }
 
 #moogle {
